Multi‑Cloud Security & Network Baseline /Modules /AWS Network/VPC.tf
resource "aws_vpc" "MultiCloud" {
  cidr_block           = "10.1.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "MultiCloud-vpc"
  }
}
